Fix contrast

--- a/src/components/Timeline/Section/styles.module.css
+++ b/src/components/Timeline/Section/styles.module.css
@@ -8,7 +8,7 @@
 .month {
   background-color: #e1e1e1;
   border-radius: 3px;
-  color: #666;
+  color: #000;
   font-size: 16px;
   line-height: 1;
   margin-bottom: 200px;
